--- a/html/career.html
+++ b/html/career.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\BootsrapAdminDashboard\css\index.css">
-    <link rel="stylesheet" href="\BootsrapAdminDashboard\css\career.css">
+    <link rel="stylesheet" href="\css\career.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -34,11 +33,12 @@
                 <div class="row">
                     <div class="col-12 list"> 
                         <ul id="left-side">
-                        <li>Dashboard</li>
-                        <li>Courses</li>
-                        <li>Career</li>
-                        <li>Contact</li>
-                        <li>Account</li>
+                            <li><a href="\index.html">Dashboard</a> </li>
+                            <li><a href="\html\courses.html">Courses</a></li>
+                            <li><a href="\html\add-courses.html">Add Courses</a></li>
+                            <li><a href="\html\career.html">Career</a></li>
+                            <li><a href="\html\contact.html">Contact</a></li>
+                            <li><a href="\html\account.html">Account</a></li>
                       </ul></div><hr>
                 </div>
                 <div class="row">
@@ -50,115 +50,35 @@
         <div class="col-lg-10"id="main">
             <div class="container">
             <div class="row">
-            <div class="col-md-12 dash">
-          <h1>courses</h1>
-          <p>Whole courses in B-station school here</p>
-         <div class="container"id="total">
-           <div class="row">
-            <div class="col-4"><div class="card" style="width: 100%;"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\nodejs.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
+            <div class="col-md-12"id="title">
+                <div>
+                    <h1>Add courses</h1></div>
+                    <div class="buttons-title">
+                        <button type="button" class="btn btn-secondary"id="btn-title">Save to draft</button>
+                        <button type="button" class="btn btn-secondary"id="btn-title2">Publich</button>
                 </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width:100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\mongodb.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4 mb-5"><div class="card" style="width: 100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\python.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-           </div>
-           <div class="row">
-            <div class="col-4 mb-5"><div class="card" style="width: 100%;"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\nodejs.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width:100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\mongodb.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width: 100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\python.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-           </div>
-           <div class="row">
-            <div class="col-4 mb-5"><div class="card" style="width: 100%;"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\nodejs.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width:100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\mongodb.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width: 100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\python.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-           </div>
-           <div class="row">
-            <div class="col-4"><div class="card" style="width: 100%;"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\nodejs.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4 mb-5"><div class="card" style="width:100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\mongodb.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                </div>
-              </div></div>
-            <div class="col-4"><div class="card" style="width: 100%"id="card-course">
-                <img src="\BootsrapAdminDashboard\image\python.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Javascript</h5>
-                  <p class="card-text">400$</p>
-                  <a href="#" class="btn btn-primary" id="btn-course">Edit</a>
-                  </div>
-              </div></div>
-           </div>
-          
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-7">
+                <form action=""class="form">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Job title</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"style="background-color: #F4F5F9;">
+                      </div>
+                    <div>
+                        <label for="exampleInputPassword1" class="form-label">Description</label>
+                        <textarea class="form-control" placeholder="describe a new position" id="floatingTextarea2" style="height: 100px;"></textarea>
+                      </div>
+                </form>
+    
+            </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
