--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\BootsrapAdminDashboard\css\index.css">
+    <link rel="stylesheet" href="\css\index.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -33,11 +33,12 @@
                 <div class="row">
                     <div class="col-12 list"> 
                         <ul id="left-side">
-                        <li>Dashboard</li>
-                        <li>Courses</li>
-                        <li>Career</li>
-                        <li>Contact</li>
-                        <li>Account</li>
+                            <li><a href="\index.html">Dashboard</a> </li>
+                            <li><a href="\html\courses.html">Courses</a></li>
+                            <li><a href="\html\add-courses.html">Add Courses</a></li>
+                            <li><a href="\html\career.html">Career</a></li>
+                            <li><a href="\html\contact.html">Contact</a></li>
+                            <li><a href="\html\account.html">Account</a></li>
                       </ul></div><hr>
                 </div>
                 <div class="row">
@@ -55,18 +56,18 @@
          <div class="container"id="total" >
             <div class="row justify-content-between">
                 <div class="col-md-3"id="card1" ><div class="subscriber">
-                    <img src="\BootsrapAdminDashboard\image\home.svg" alt="home icon">
+                    <img src="\image\students.svg" alt="home icon">
                     <div class="txt-icon">
                     <p>subscriber</p><p>2000+</p></div>
                 </div>
                 </div>
                 <div class="col-md-3"id="card2" ><div class="subscriber">
-                    <img src="\BootsrapAdminDashboard\image\courses.svg" alt="home icon">
+                    <img src="\image\courses.svg" alt="home icon">
                     <div class="txt-icon">
                     <p>Courses</p><p>500 courses</p></div>
                 </div> </div>
                 <div class="col-md-3"id="card3" ><div class="subscriber">
-                    <img src="\BootsrapAdminDashboard\image\coins.svg" alt="home icon">
+                    <img src="\image\coins.svg" alt="home icon">
                     <div class="txt-icon">
                     <p>Monthly Earnings</p><p>6000$</p></div>
                  </div>
