--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                  </div>
                 </div>
             </div>
+
             <div class="container"id="charts">
 
                 <div class="row" id="latest-subsecription">
@@ -94,11 +95,11 @@
                             status
                           </button>
                           <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Start</a></li>
+                            <li><a class="dropdown-item" href="#">End</a></li>
+                            <li><a class="dropdown-item" href="#">Still</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            <li><a class="dropdown-item" href="#">not publich</a></li>
                           </ul>
                         </div></div>
                 </div>
@@ -106,7 +107,7 @@
                 <div class="col-lg-2 colu">HTML </div>
                 <div class="col-lg-2 colu">100$</div>
                 <div class="col-lg-2 colu"id="end">end</div>
-                <div class="col-lg-2 colu">chart 4</div>
+                <div class="col-lg-2 colu">12.5.2022</div>
                 <div class="col-lg-2 btns"><button type="button" class="btn btn-success"id="btn-one">Success</button><button type="button" class="btn btn-success"id="btn-two">Success</button>
                 </div>
             </div>
@@ -114,7 +115,7 @@
                 <div class="col-lg-2 colu">CSS</div>
                 <div class="col-lg-2 colu">200$</div>
                 <div class="col-lg-2 colu"id="end">end</div>
-                <div class="col-lg-2 colu">chart 9</div>
+                <div class="col-lg-2 colu">15.1.2023</div>
                 <div class="col-lg-2 btns"><button type="button" class="btn btn-success"id="btn-one">Success</button><button type="button" class="btn btn-success"id="btn-two">Success</button>
                 </div>
             </div>
@@ -122,7 +123,7 @@
                 <div class="col-lg-2 colu">Javascript</div>
                 <div class="col-lg-2 colu">400$</div>
                 <div class="col-lg-2 colu"id="start">start</div>
-                <div class="col-lg-2 colu">chart 14</div>
+                <div class="col-lg-2 colu">2.3.2023</div>
                 <div class="col-lg-2 btns"><button type="button" class="btn btn-success"id="btn-one">Success</button><button type="button" class="btn btn-success"id="btn-two">Success</button>
                 </div>
             </div>
@@ -130,7 +131,7 @@
                 <div class="col-lg-2 colu">php</div>
                 <div class="col-lg-2 colu">500$</div>
                 <div class="col-lg-2 colu"id="still">still</div>
-                <div class="col-lg-2 colu">chart 19</div>
+                <div class="col-lg-2 colu">17.6.2023</div>
                 <div class="col-lg-2 btns"><button type="button" class="btn btn-success"id="btn-one">Success</button><button type="button" class="btn btn-success"id="btn-two">Success</button>
                 </div>
             </div>
@@ -138,15 +139,17 @@
                 <div class="col-lg-2 colu">React</div>
                 <div class="col-lg-2 colu">350$</div>
                 <div class="col-lg-2 colu"id="start">start</div>
-                <div class="col-lg-2 colu">chart 10</div>
+                <div class="col-lg-2 colu">15.4.2.23</div>
                 <div class="col-lg-2 btns"><button type="button" class="btn btn-success"id="btn-one">Success</button><button type="button" class="btn btn-success"id="btn-two">Success</button>
                 </div>
             </div>
         </div>
+    
          </div></div>
         </div>
 
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
